--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: esc_pos_bluetooth
 description: The library allows to print receipts using an ESC/POS thermal Bluetooth printer.
 publish_to: none
-version: 0.2.7
+version: 0.2.8-dev.nullsafety
 homepage: https://github.com/andrey-ushakov/esc_pos_bluetooth
 
 environment:
@@ -13,7 +13,7 @@ dependencies:
   rxdart: ^0.26.0
   esc_pos_utils: 
     git:
-      url: https://github.com/teewhydope/esc_pos_utils.git
+      url: https://github.com/in4matic-srl/esc_pos_utils.git
       
   # esc_pos_utils:
     # path: ../esc_pos_utils
